[IntersectionObserver] Fix target rect calculation for LayoutInline.

BUG=847623
R=chrishtr@chromium.org

Change-Id: Ib8cefc856ecbeadfdeecabcf7f20b6d3b457db6a
Reviewed-on: https://chromium-review.googlesource.com/1164473
Commit-Queue: Stefan Zager <szager@chromium.org>
Reviewed-by: Chris Harrelson <chrishtr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#581271}